# track-job-applications

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app_functions.py  database.py  db_functions.py  index.html  logger.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  todo.txt  update.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  dependency-review.yml  gh-deploy.yml  python-package.yml
CONTRIBUTING/: index.html
Commands/: index.html
LICENSE/: index.html
References/: index.html
docs/: CONTRIBUTING.md  Commands.md  References.md  index.md
shared/: dao.py  database.py  db_functions.py
site/: 404.html  index.html  objects.inv
site/CONTRIBUTING/: index.html
site/Commands/: index.html
site/LICENSE/: index.html
site/References/: index.html
tests/: test_app_functions.py  test_cli.py  test_db_handler.py
tests/helpers/: mock.py
track/: __init__.py  __main__.py  app_constants.py  app_functions.py  cli.py  dao.py  database.py  db_functions.py  db_handler.py  job_application.py  job_tracker.py  logger.py  main.py  metrics.py  report.py  report_cli.py  reporter.py  update.py  update_cli.py
