[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 79

[tool.poetry]
name = "track-job-applications"
version = "0.0.3"
description = "A CLI application to track job applications and provide relevant metrics on them."
authors = ["Aditya Gupta <guptaaditya008@gmail.com>"]
maintainers = ["Aditya Gupta <guptaaditya008@gmail.com>"]
repository = "https://github.com/Aditya-Gupta1/track-job-applications"
license = "MIT"
readme = "README.md"
packages = [
    {include = "track"}
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
click = "^8.0.0"
SQLAlchemy = "^1.4.41"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
typer = "^0.6.1"
click = "^8.0.0"
SQLAlchemy = "^1.4.41"
rich = "^12.6.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
interrogate = "^1.5.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
faker = "15.1.1"
pytest-mock = "3.10.0"
coverage = "6.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocstrings-python = "0.7.1"
mkdocs-material = "8.5.9"

[tool.pytest.ini_options]
log_cli=true
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
track-job = 'track.cli:entry'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Aditya-Gupta1/track-job-applications/issues"
